--- a/list.css
+++ b/list.css
@@ -229,3 +229,253 @@ ul li a:hover{
   .fas{
       font-size: 50px;
   }
+
+
+  @media only screen and (max-width: 768px){
+
+   
+    body{
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        padding: 0;
+               
+    }
+    
+    .back{
+        text-decoration: none;
+        list-style-type: none;
+
+    
+    }
+    
+    .divv{
+        font-size: 65px;
+        margin-left: 25px;
+    }
+    
+    .fa{
+        color: rgb(255, 255, 255);
+        font-size: 39px;
+
+    }
+    .divv .fa:hover{
+        color: rgb(50, 192, 248);
+        font-size: 45px;
+        transition: 0.5s;
+    }
+    
+    .settings{
+        width: 50px;
+        height: 50px;
+        margin-left: 330px;
+        margin-top: -50px;
+      
+    }
+    
+    .settings .fa{
+
+        font-size: 34px;
+        color: black;
+    }
+    
+    
+    ul{
+        position: absolute;
+        top: 20%;
+        left: 50%;
+        display: flex;
+        margin: 0;
+        padding: 0;
+        transform: translate(-50%,-50%);
+        background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,81,121,1) 50%, rgba(0,212,255,1) 100%);
+        width: 340px;
+        height: 80px;
+        border-radius:75px;
+    }
+    
+    ul li{
+        list-style: none;
+        margin-top: 19px;
+        margin-left: 1px;
+        padding-left: 20px;
+    }
+    
+    ul li a .fa{
+        font-size: 30px;
+        color: #333;
+        line-height: 80px;
+        transition: 0.5s;
+        padding-right:14px;
+        margin-top: -17px;
+        margin-left: -3px;
+    
+    }
+    ul li a span{
+        margin: 0;
+        padding: 0;
+        position: absolute;
+        top: 53px;
+        left: 20px;
+        color: #333;
+        letter-spacing: 2px;
+        transition: 0.5s;
+    
+    
+        
+    }
+    
+    ul li a h3{
+        color: black;
+        margin-top:-25px;
+        margin-left: -12px;
+        font-size: 7px;
+    }
+    
+    ul li a{
+        text-decoration: none;
+        display: absolute;
+        display: block;
+        width: 30px;
+        height: 50px;
+        background: #fff;
+        text-align: left;
+        padding-left: 15px;
+        transition: 0.5s;
+        box-shadow: -10px 10px 10px rgba(0,0,0,0.5); 
+        border-radius: 30%;
+        
+    }
+    
+    
+    
+    ul li a:hover{
+        transform: translate(10px,-5px);
+        box-shadow: -50px 50px 50px rgba(0,0,0,0.5);
+    }
+    
+    
+    .div0{
+        margin-top: 120px;
+        margin-left: 110px;
+        color: white;
+        
+    }
+    
+    
+    .card{
+        position: relative;
+        width: 310px;
+        height: 100px;
+        transform-style: preserve-3d;
+        border-bottom-color: white;
+        border-style: outset;
+        margin-left: 30px;
+        margin-top: 60px;
+        
+        
+    }
+    
+    .card .face{
+      
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transform-style: preserve-3d;
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        backface-visibility: hidden;
+        transition: 0.7s ease-in-out;   
+         transform: perspective(500px) rotateX(0deg);    
+    }
+
+    .NameP{
+    
+        font-size: 10px;
+        margin-left: 15px;
+    }
+    
+    
+    .card .face.front{
+        background-color: white;
+        color: black;
+    }
+    
+    .card:hover .face.front{
+        transform: perspective(500px) rotateX(180deg);
+    }
+    
+    .card .face.back{
+        background-color: #fdfdfd;
+        font-size:4px;
+        transform: perspective(500px) rotateX(180deg);
+    }
+    
+    .card:hover .face.back{
+        transform: perspective(500px) rotateX(360deg);
+    
+    }
+    
+    .imgFront{
+        width: 100px;
+        margin-left: 120px;
+    }
+    
+    .imgFront1{
+        width: 100px;
+        margin-right: 0px;
+    }
+    
+    .btn {
+        border-radius: 20px;
+        background-color: #1f0e04;
+        border: none;
+        color: #f0f0f0;
+        text-align: center;
+        font-size: 15px;
+        width: 100px;
+        transition: all 0.4s;
+        cursor: pointer;
+        padding: 20px;
+        margin: 5px;
+        margin-left: 50px;
+      }
+      
+      .btn span {
+        cursor: pointer;
+        position: relative;
+        transition: 0.5s;
+        display: inline-block;
+    
+      }
+      
+      .btn span:after {
+        position: absolute;
+        opacity: 0;
+        content: '\00bb';
+        top: 0;
+        transition: 0.5s;
+        right: -20px;
+    
+      }
+      
+      .btn:hover span {
+        padding-right: 25px;
+      }
+      
+      .btn:hover span:after {
+        right: 0;
+        opacity: 1;
+    
+      }
+    
+      .fas{
+          font-size: 50px;
+      }
+
+
+
+  }
