--- a/register.css
+++ b/register.css
@@ -197,13 +197,130 @@
 
 
 
-  @media (max-width: 700px){
-    .wave3{
-        display: block;
-        margin-top: -1rem;
-        margin-left: -10px;
+@media only screen and (max-width: 768px){
+    .Reg_main{
+        background-color: rgb(7, 7, 58) ;
+    }
+
+    .registerMain{
+        max-width: 260px;
+        width: 100%;
+        height: 350px;
+        padding: 60px 45px;
+        position: absolute;
+        background: #fff;
+        transform: translate(-50%,-50%);
+        border-radius: 20px;
+        margin-left: -155px;
+        margin-top: -40px;
+        text-decoration: none;
+        box-shadow:  5px 5px 5px  #06080e;
+    
+        
     
     }
+
+    
+.profilePic{
+    width: 100px;
+    margin-left: 90px;
+}
+
+.fa {
+    padding: 6px;
+    width: 20px;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 20px;
+    text-decoration: none;
+    margin: 5px 8px;
+    cursor: pointer;
+    
+
+}
+.registerMain .title{
+    display: none;
+}
+
+
+
+.RegForm{
+    padding-left: 68px;
+
+
+}
+
+.inputField{
+    position: relative;
+    top: 20px;
+    margin-bottom: 20px;
+    padding-left: 30px;
+
+
+
+}
+
+.input {
+    width: 90%;
+    padding: 12px 12px 12px 10px;
+    border: none;
+    background: #eeeeee;
+
+
+}
+
+.rememberMe{
+    padding: 30px 12px 12px 28px;
+    font-size: 15px;
+
+
+
+
+}
+
+.forget{
+    color: #4392cf;
+    text-decoration: none;
+    padding: 30px 12px 12px 31px;
+    font-size: 15px;
+
+}
+
+.regbtn{
+    text-decoration: none;
+    color: white;
+
+}
+
+.button{
+    width: 40%;
+    margin: 45px 0 0 100px;
+    background: #0e3588;
+    cursor: pointer;
+    padding: 12px ;
+    text-align: center;
+    border-radius: 30px;
+    color: #fff;
+    box-shadow: 0 5px #06080e;
+    ;
+
+}
+
+.button:hover {
+    background-color: black;
+    box-shadow: 0 5px #10234e;
+    ;
+
+}
+
+
+.button:active{
+    background-color: #212329 ;
+    transform: translateY(4px);
+    box-shadow: 0 3px dimgray;
+}
+
+ 
 
     .wave{
         display: none;
